--- a/index.html
+++ b/index.html
@@ -9,78 +9,76 @@
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <title>Projet n°2 Michel Mbaka</title>
     </head>
-
     <body>
         <header>
-            <div class="titre_principal">
-                <div class="logo">
+            <div class="hdr_tit_pri_14"><!--hdr_tit_pri_14: Titre_Principal_Ligne_14-->
+                <div class="hdr_tit_pri_logo_15">
                     <img src="Projet_2_Reservia/images/logo/Reservia@3x.png" alt="Logo de Reservia@3x" />
                 </div>
                 <nav>
-                    <div class="header_nav_list mobile mobile1" ><a href="#hbg"><strong>Hébergement</strong></a></div>
-                    <div class="header_nav_list mobile mobile2"><a href="#ate"><strong>Activités</strong></a></div>
+                    <div class="hdr_nav_lis mob mob1" ><a href="#hbg"><strong>Hébergement</strong></a></div>
+                    <div class="hdr_nav_lis mob mob2"><a href="#ate"><strong>Activités</strong></a></div>
                 </nav>
-                <div class="header_inscrire"><a href="#"><strong>S'inscrire</strong></a></div>
+                <div class="hdr_tit_pri_22_ins"><a href="#"><strong>S'inscrire</strong></a></div><!--hdr_tit_pri_22_ins: Titre_Principal_Ligne_22_inscrire-->
            </div>
         </header>
-        <div class="bloc_section"> 
-            <section class="sec_p">
-                <div class="par">
+        <div class="bloc_sec_25"> 
+            <section class="sec_26_P"><!--bloc_Section_Ligne_26_Prémière_Unité-->
+                <div class="sec_27_P">
                     <h1><strong>Trouvez votre hébergement pour des vacances de rêve</strong></h1>
                     <h2>En plein centre ville ou en pleine nature</h2> 
                 </div>
-                <div class="rf">
-                    <div class="Recherche">
-                        <div class="res1"><i class="fas fa-map-marker-alt" style="color:black; font-size:20px"></i></div>
-                        <div class="res2"><strong>Marseille, France</strong></div>
-                        <div class="b_r3r4">
-                            <div class="res3"><a href="#">Recherche</a></div>
-                            <div class="res4"><a href="#"><strong><i class="fas fa-search" style="color:white; font-size:20px"></i></strong></a></div>
+                <div class="sec_31_P">
+                    <div class="sec_32_P_Rec "><!--bloc_Section_Ligne_26_Prémière_Unité_Recherche-->
+                        <div class="sec_33_P_Rec"><i class="fas fa-map-marker-alt" style="color:black; font-size:20px"></i></div>
+                        <div class="sec_34_P_Rec"><strong>Marseille, France</strong></div>
+                        <div class="sec_35_P_Rec">
+                            <div class="sec_36_P_Rec"><a href="#">Recherche</a></div>
+                            <div class="sec_37_P_Rec"><a href="#"><strong><i class="fas fa-search" style="color:white; font-size:20px"></i></strong></a></div>
                         </div>
-
                     </div> 
-                    <div class="fil">
-                        <div class="fi1">
+                    <div class="sec_40_P_fil"><!--bloc_Section_Ligne_40_Prémière_Unité_Filtre-->
+                        <div class="sec_41_P_fil">
                             <strong>Filtre</strong>
                         </div>
-                        <div class="fi2">
-                            <div class="f1">
-                                <div class="f1_i"><i class="fas fa-money-bill-wave" style="color:blue; font-size:15px"></i></div>
-                                <div class="f1_ii"><a href="#" title="Voir côte Economique"><strong>Economique</strong></a></div>
+                        <div class="sec_44_P_fil">
+                            <div class="sec_45_P_fil">
+                                <div class="sec_46_P_fil"><i class="fas fa-money-bill-wave" style="color:blue; font-size:15px"></i></div>
+                                <div class="sec_47_P_fil"><a href="#" title="Voir côte Economique"><strong>Economique</strong></a></div>
                             </div>
-                            <div class="f2">
-                                <div class="f2_i"><i class="fas fa-child" style="color:blue; font-size:15px"></i></div>
-                                <div class="f2_ii"><a href="#" title="Voir côte Familial"><strong>Familial</strong></a></div>
+                            <div class="sec_49_P_fil">
+                                <div class="sec_50_P_fil"><i class="fas fa-child" style="color:blue; font-size:15px"></i></div>
+                                <div class="sec_51_P_fil"><a href="#" title="Voir côte Familial"><strong>Familial</strong></a></div>
                             </div>
-                            <div class="f3">
-                                <div class="f3_i"><i class="fas fa-heart"  style="color:blue; font-size:15px"></i></div>
-                                <div class="f3_ii"><a href="#" title="Voir côte Romantique"><strong>Romantique</strong></a></div>
+                            <div class="sec_53_P_fil">
+                                <div class="sec_54_P_fil"><i class="fas fa-heart"  style="color:blue; font-size:15px"></i></div>
+                                <div class="sec_55_P_fil"><a href="#" title="Voir côte Romantique"><strong>Romantique</strong></a></div>
                             </div>
-                            <div class="f4">
-                                <div class="f4_i"><i class="fas fa-dog" style="color:blue; font-size:15px"></i></div>
-                                <div class="f4_ii"><a href="#" title="Voir côte Animalier"><strong>Animaux autorisés</strong></a></div>
+                            <div class="sec_57_P_fil">
+                                <div class="sec_58_P_fil"><i class="fas fa-dog" style="color:blue; font-size:15px"></i></div>
+                                <div class="sec_59_P_fil"><a href="#" title="Voir côte Animalier"><strong>Animaux autorisés</strong></a></div>
                             </div>
                         </div>
                     </div>
-                    <div class="ip">
-                        <div class="ic5"><i class="fas fa-info" style="color:blue; font-size:10px"></i></div>
-                        <div class="ic55">plus de 500 logements sont disponibles dans cette ville</div>   
+                    <div class="sec_63_P_I_P"><!--bloc_Section_Ligne_63_Prémière_Unité_Icône_Paragraphe-->
+                        <div class="sec_64_P_I_P"><i class="fas fa-info" style="color:blue; font-size:10px"></i></div>
+                        <div class="sec_65_P_I_P">plus de 500 logements sont disponibles dans cette ville</div>   
                     </div>
                 </div>
             </section><br/>
-            <section class="sec1">
-                <div id="hbg" class="ber">
-                    <div class="be1">
+            <section class="sec_69_D"><!--bloc_Section_Ligne_69_Deuxième_Unité-->
+                <div id="hbg" class="sec_heb_70_D"><!--bloc_Section_Hebergement_Ligne_70_Deuxième_Unité-->
+                    <div class="sec_heb_71_D">
                         <strong>Heberegement à Marseille</strong>
                     </div><br/>
-                    <div class="bloc_img">
-                        <div class="be2">
-                            <div class="b2">
+                    <div class="sec_heb_74_D_b_img"><!--bloc_Section_Hebergement_Ligne_74_Deuxième_Unité_Bloc_Image-->
+                        <div class="sec_heb_75">
+                            <div class="sec_heb_76">
                                 <a href="Projet_2_Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
                                 <img src="Projet_2_Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" 
                                 alt=" Photo marcus-loke-WQJvWU_HZFo-unsplash" title="Cliquez pour agrandir"/> </a>      
                             </div>
-                            <div class="b22">
+                            <div class="sec_heb_81">
                                  <h1><strong><a href="#" title="Visiter le lieu">Auberge la Cannablère</a></strong></h1>
                                  <h2>nuit à partir de 25€</h2><br/>
                                  <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -90,13 +88,13 @@
                                  <i class="fas fa-star" style="color:grey; font-size:10px"></i>
                             </div>
                         </div>
-                        <div class="be3">
-                            <div class="b3">
+                        <div class="sec_heb_91">
+                            <div class="sec_heb_92">
                                 <a href="Projet_2_Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
                                 <img src="Projet_2_Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" 
                                 alt=" Photo fred-kleber-gTbaxaVLvsg-unsplash" title="Cliquez pour agrandir"/> </a>      
                             </div>
-                            <div class="b33">
+                            <div class="sec_heb_97">
                                 <h1><strong><a href="#" title="Visiter le lieu">Hôtel du port</a></strong></h1>
                                 <h2>nuit à partir de 52€</h2><br/>
                                 <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -106,13 +104,13 @@
                                 <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                             </div>
                         </div>
-                        <div class="be4">
-                            <div class="b4">
+                        <div class="sec_heb_107">
+                            <div class="sec_heb_108">
                                 <a href="Projet_2_Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
                                 <img src="Projet_2_Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                                 alt="  Photo reisetopia-B8WIgxA_PFU-unsplash" title="Cliquez pour agrandir" /> </a>      
                             </div>
-                            <div class="b44">
+                            <div class="sec_heb_113">
                                 <h1><strong><a href="#" title="Visiter le lieu">Hôtel les Mouettes</a></strong></h1>
                                 <h2>nuit à partir de 76€</h2><br/>
                                 <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -122,13 +120,13 @@
                                 <i class="fas fa-star" style="color:grey; font-size:10px"></i>
                             </div>
                         </div> 
-                        <div class="be5">
-                            <div class="b5">
+                        <div class="sec_heb_123">
+                            <div class="sec_heb_124">
                                 <a href="Projet_2_Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
                                 <img src="Projet_2_Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                                 alt=" Photo annie-spratt-Eg1qcIitAuA-unsplash" title="Cliquez pour agrandir" /></a>       
                             </div>
-                            <div class="b55">
+                            <div class="sec_heb_129">
                                 <h1><strong><a href="#" title="Visiter le lieu">Hotel de la mer</a></strong></h1>
                                 <h2>nuit à partir de 46€</h2><br/>
                                 <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -138,13 +136,13 @@
                                 <i class="fas fa-star" style="color:grey; font-size:10px"></i>
                             </div>
                         </div>
-                        <div class="be6">
-                            <div class="b6">
+                        <div class="sec_heb_139">
+                            <div class="sec_heb_140">
                                 <a href="Projet_2_Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
                                 <img src="Projet_2_Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                                 alt=" Photo nicate-lee-kT-ZyaiwBe0-unsplash" title="Cliquez pour agrandir"/></a>
                             </div>
-                            <div class="b66">
+                            <div class="sec_heb_145">
                                 <h1><strong><a href="#" title="Visiter le lieu">Auberge le Panier</a></strong></h1>
                                 <h2>nuit à partir de 23€</h2><br/>
                                 <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -154,13 +152,13 @@
                                 <i class="fas fa-star" style="color:grey; font-size:10px"></i>
                             </div> 
                         </div> 
-                        <div class="be7">
-                            <div class="b7">
+                        <div class="sec_heb_155">
+                            <div class="sec_heb_156">
                                 <a href="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
                                 <img src="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                                 alt="  Photo febrian-zakaria-M6S1WvfW68A-unsplash" title="Cliquez pour agrandir"/></a>      
                             </div>
-                            <div class="b77">
+                            <div class="sec_heb_161">
                                 <h1><strong><a href="#" title="Visiter le lieu">Hôtel chez Amina</a></strong></h1>
                                 <h2>nuit à partir de 96€</h2><br/>
                                 <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -171,11 +169,11 @@
                             </div>
                         </div> 
                     </div>
-                    <div class="be8">
+                    <div class="sec_heb_172">
                         <h2> <strong>Afficher plus</strong></h2>
                     </div>
                 </div>
-                <div class="pop">
+                <div class="sec_heb_74_D_b_p"><!--bloc_Section_Hebergement_Ligne_74_Deuxième_Unité_Bloc_plus_populaires-->
                     <div class="po1">
                         <div class="p1">
                             <strong>plus populaires</strong>
@@ -234,7 +232,7 @@
                     </div>
                 </div> 
             </section><br/>
-            <section class="sec2">
+            <section class="sec2 sec_235_T"><!--bloc_Section_Ligne_26_Troisième_Unité-->
                 <div id="ate" class="b_se1">
                     <strong>Activites à Marseille</strong>
                 </div><br/>
